environments/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actions-prod
  labels:
    name: actions-prod
    environment: production
